fixing text alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -846,3 +846,7 @@ body.management-page {
 .management-page {
     height: 100%;
 }
+
+.center-text {
+    text-align: center;
+}
